fixed scrolling on mobile bucketview, fixed scrolling on forms

--- a/client/views/components/genny/app-content/appContent.scss
+++ b/client/views/components/genny/app-content/appContent.scss
@@ -4,5 +4,5 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    overflow: scroll;
+    //overflow: scroll;
 }
